--- a/pages/geografis.html
+++ b/pages/geografis.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/styles/footer.css" />
     <link rel="stylesheet" href="../assets/styles/pages-template.css" />
     <link rel="stylesheet" href="../assets/styles/accessibility.css" />
+    <link rel="stylesheet" href="../assets/styles/main-text-template.css" />
   </head>
   <body>
     <div class="navbar">
@@ -231,11 +232,15 @@
       <div class="darken-overlay"></div>
 
       <div class="hero-main">
-        <p class="hero-title">Layanan Kami</p>
+        <p class="hero-title">Geografis Batang</p>
       </div>
     </section>
 
-    <section class="main"> </section>
+    <section class="main">
+      <div class="main-text-container">
+        <div class="main-text-header"> Page Not Found </div>
+      </div>
+    </section>
 
     <section class="footer bg-darkgray-gradient">
       <div class="footer-top">
