--- a/pages/layanan.html
+++ b/pages/layanan.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/styles/footer.css" />
     <link rel="stylesheet" href="../assets/styles/pages-template.css" />
     <link rel="stylesheet" href="../assets/styles/accessibility.css" />
+    <link rel="stylesheet" href="../assets/styles/main-text-template.css" />
   </head>
   <body>
     <div class="navbar">
@@ -235,7 +236,15 @@
       </div>
     </section>
 
-    <section class="main"> </section>
+    <section class="main">
+      <div class="main-text-container lower-gap">
+        <div class="main-text-header"> Download Informasi Penting </div>
+        <div class="main-text-desc df-jcc">
+          Lihat dan download informasi penting seputar batang
+        </div>
+        <a href="./download.html">go here</a>
+      </div>
+    </section>
 
     <section class="footer bg-darkgray-gradient">
       <div class="footer-top">
