small ui update, download

--- a/pages/download.html
+++ b/pages/download.html
@@ -238,22 +238,29 @@
     </section>
 
     <section class="main">
-      <div class="main-text-container mid-gap">
-        <table class="download-table">
-          <thead>
-            <tr>
-              <th>No</th>
-              <th>Nama File</th>
-              <th>Ekstensi</th>
-              <th>Ukuran</th>
-              <th>Download</th>
-            </tr>
-          </thead>
-          <tbody id="downloadTable"></tbody>
-        </table>
-        <div class="main-text-desc light-gray"
-          >Menampilkan : 1 sampai 5 dari 5 entri</div
-        >
+      <div class="main-text-container big-gap">
+        <div class="main-text-desc back-link">
+          <a href="./layanan.html">Layanan</a>
+          <p>/</p>
+          <p class="melon">Download</p>
+        </div>
+        <div class="table-container mid-gap">
+          <table class="download-table">
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>Nama File</th>
+                <th>Ekstensi</th>
+                <th>Ukuran</th>
+                <th>Download</th>
+              </tr>
+            </thead>
+            <tbody id="downloadTable"></tbody>
+          </table>
+          <div class="main-text-desc light-gray"
+            >Menampilkan : 1 sampai 5 dari 5 entri</div
+          >
+        </div>
       </div>
     </section>
 
