--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
       </div>
     </div>
 
-    <script src="../components/variables.js"></script>
+    <script src="./components/variables.js"></script>
     <script src="./components/navbar.js"></script>
     <script src="./components/renderNews.js"></script>
     <script src="./components/renderPhotoNews.js"></script>
