--- a/pages/berita.html
+++ b/pages/berita.html
@@ -214,18 +214,19 @@
 
             <a href="./layanan.html" class="nav-link nav-item">Layanan</a>
           </div>
-          <div class="search-bar">
-            <input
-              type="search"
-              id="search-input"
-              placeholder="Cari"
-              class="search-input"
-            />
-            <img
-              src="../assets/icons/search.svg"
-              alt="searchicon"
-              class="search-btn"
-            />
+          <div class="search-bar"
+            ><form class="search-form" id="search-form">
+              <input
+                type="search"
+                id="search-input"
+                placeholder="Cari"
+                class="search-input"
+                required
+              />
+              <button type="submit" class="search-btn">
+                <img src="../assets/icons/search.svg" alt="searchicon" />
+              </button>
+            </form>
           </div>
         </div>
       </div>
@@ -361,6 +362,7 @@
     </div>
 
     <script src="../components/variables.js"></script>
+    <script src="../components/searchForm.js"></script>
     <script src="../components/fullNews.js"></script>
     <script src="../components/columnNews.js"></script>
     <script src="../components/accessibility.js"></script>
