--- a/pages/search.html
+++ b/pages/search.html
@@ -245,7 +245,7 @@
           <div class="query-result" id="query-result">Query</div>
         </div>
 
-        <div class="empty-result"></div>
+        <div class="empty-result hidden"></div>
       </div>
     </section>
 
