beritafoto update in beritalist

--- a/pages/berita-list.html
+++ b/pages/berita-list.html
@@ -243,6 +243,8 @@
           <div class="berita-container-row" id="terbaru-row"> </div>
         </div>
       </div>
+
+      
     </section>
 
     <section class="footer bg-darkgray-gradient">
@@ -371,6 +373,7 @@
     <script src="../components/variables.js"></script>
     <script src="../components/searchForm.js"></script>
     <script src="../components/renderNews.js"></script>
+    <script src="../components/renderPhotoNews.js"></script>
     <script src="../components/beritaList.js"></script>
     <script src="../components/accessibility.js"></script>
     <script src="../components/scrollToHash.js"></script>
