--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     </section>
 
     <section class="main">
-      <div class="main-sections">
+      <!-- <div class="main-sections">
         <div class="section-header">
           <div class="triangle-link-container ai-c">
             <a class="section-header-title"
@@ -296,6 +296,31 @@
               >
             </div>
           </div>
+        </div>
+      </div> -->
+
+      <div class="main-sections fd-r">
+        <img
+          src="./assets/images/batang.png"
+          alt="batang"
+          class="main-text-section-img"
+        />
+        <div class="main-text-section-container">
+          <div class="main-text-section-header"> Sejarah Batang </div>
+          <div class="main-text-section-desc"
+            >Kabupaten Batang, yang terletak di pesisir utara Jawa Tengah,
+            memiliki sejarah panjang yang dimulai sejak masa Kerajaan Mataram
+            Islam. Nama "Batang" berasal dari legenda Ki Ageng Bahurekso,
+            seorang tokoh yang berhasil mengangkat batang kayu besar yang
+            menghalangi aliran air di daerah tersebut, sebuah peristiwa yang
+            kemudian menjadi asal-usul nama daerah ini . Pada masa lalu, Batang
+            dikenal sebagai kota pelabuhan penting yang sejajar dengan Pemalang
+            dan Demak, serta telah dikenal sejak zaman Sriwijaya dan Majapahit .
+            Pemerintahan Kabupaten Batang mengalami dua periode, dimulai dari
+            kebangkitan Mataram Islam hingga masa penjajahan Eropa, dengan tokoh
+            penting seperti Kanjeng Adipati Pangeran Mandurorejo yang dianggap
+            sebagai cikal bakal pemerintahan kabupaten ini .</div
+          >
         </div>
       </div>
 
