--- a/pages/layanan.html
+++ b/pages/layanan.html
@@ -238,22 +238,27 @@
     </section>
 
     <section class="main">
-      <div class="main-text-container lower-gap">
+      <div class="main-text-container lower-gap h-50vh jc-c">
         <div class="main-text-header">Lapor Bupati</div>
         <div class="main-text-desc df-jcc tac mid-width">
           Sampaikan keluhan, saran, dan aspirasi secara langsung kepada Bupati
           demi perbaikan layanan dan pembangunan daerah.
         </div>
-        <a href="./lapor.html">go here</a>
+        <a href="./lapor.html">
+          <button class="primary-btn">Lapor</button>
+        </a>
       </div>
-      <div class="main-text-container lower-gap">
+      <div class="horizontal-line w-80 thin"></div>
+      <div class="main-text-container lower-gap h-50vh jc-c bg-offwhite">
         <div class="main-text-header"> Download Informasi Penting</div>
         <div class="main-text-desc df-jcc tac mid-width">
           akses cepat bagi masyarakat untuk mengunduh dokumen-dokumen resmi,
           pengumuman, dan data penting yang berkaitan dengan kebijakan dan
           layanan pemerintahan daerah.
         </div>
-        <a href="./download.html">go here</a>
+        <a href="./download.html">
+          <button class="primary-btn">Download</button>
+        </a>
       </div>
     </section>
 
