--- a/index.html
+++ b/index.html
@@ -299,14 +299,20 @@
         </div>
       </div> -->
 
-      <div class="main-sections fd-r">
-        <img
-          src="./assets/images/batang.png"
-          alt="batang"
-          class="main-text-section-img"
-        />
-        <div class="main-text-section-container">
-          <div class="main-text-section-header"> Sejarah Batang </div>
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <p class="section-header-title">Sejarah Batang</p>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="main-sections-container fd-r">
+          <img
+            src="./assets/images/batang.png"
+            alt="batang"
+            class="main-text-section-img"
+          />
           <div class="main-text-section-desc"
             >Kabupaten Batang, yang terletak di pesisir utara Jawa Tengah,
             memiliki sejarah panjang yang dimulai sejak masa Kerajaan Mataram
@@ -319,8 +325,8 @@
             Pemerintahan Kabupaten Batang mengalami dua periode, dimulai dari
             kebangkitan Mataram Islam hingga masa penjajahan Eropa, dengan tokoh
             penting seperti Kanjeng Adipati Pangeran Mandurorejo yang dianggap
-            sebagai cikal bakal pemerintahan kabupaten ini .</div
-          >
+            sebagai cikal bakal pemerintahan kabupaten ini .
+          </div>
         </div>
       </div>
 
