--- a/pages/lapor.html
+++ b/pages/lapor.html
@@ -267,15 +267,19 @@
             </div>
 
             <div class="form-element-container">
-              <label for="age-input" class="form-label">Nomor telepon</label>
-              <input
-                type="number"
-                id="age-input"
-                name="age-input"
-                placeholder="Masukkan nomor telepon anda"
-                class="form-input"
-              />
-              <div class="errormsg" id="age-error"></div>
+              <label for="phone-input" class="form-label">Nomor telepon</label>
+
+              <div class="notelp-container">
+                +62
+                <input
+                  type="tel"
+                  id="phone-input"
+                  name="phone-input"
+                  placeholder=""
+                  class="form-input"
+                />
+              </div>
+              <div class="errormsg" id="phone-error"></div>
             </div>
 
             <div class="form-element-container">
@@ -284,39 +288,39 @@
                 <div class="checkbox-container">
                   <input
                     type="checkbox"
-                    id="interests-input"
-                    name="interests-input"
+                    id="jenislapor-input"
+                    name="jenislapor-input"
                     class="checkbox"
                   />
-                  <label for="interests-input" class="checkbox-label">
+                  <label for="jenislapor-input" class="checkbox-label">
                     Pengaduan
                   </label>
                 </div>
                 <div class="checkbox-container">
                   <input
                     type="checkbox"
-                    id="interests-input"
-                    name="interests-input"
+                    id="jenislapor-input"
+                    name="jenislapor-input"
                     class="checkbox"
                   />
-                  <label for="interests-input" class="checkbox-label">
+                  <label for="jenislapor-input" class="checkbox-label">
                     Aspirasi
                   </label>
                 </div>
                 <div class="checkbox-container">
                   <input
                     type="checkbox"
-                    id="interests-input"
-                    name="interests-input"
+                    id="jenislapor-input"
+                    name="jenislapor-input"
                     class="checkbox"
                   />
-                  <label for="interests-input" class="checkbox-label">
+                  <label for="jenislapor-input" class="checkbox-label">
                     Permintaan Informasi
                   </label>
                 </div>
               </div>
 
-              <div class="errormsg" id="interests-error"></div>
+              <div class="errormsg" id="jenislapor-error"></div>
             </div>
 
             <div class="form-element-container">
@@ -340,8 +344,14 @@
                   accept="image/*,video/*,.pdf,.doc,.docx"
                 />
                 <div class="file-input-content">
-                  <span class="file-input-text" id="file-input-text">Masukkan bukti yang anda miliki</span>
-                  <img src="../assets/icons/paperclip.svg" alt="attachment" class="attachment-icon" />
+                  <span class="file-input-text" id="file-input-text"
+                    >Masukkan bukti yang anda miliki</span
+                  >
+                  <img
+                    src="../assets/icons/paperclip.svg"
+                    alt="attachment"
+                    class="attachment-icon"
+                  />
                 </div>
               </div>
               <div class="errormsg" id="evidence-error"></div>
@@ -478,6 +488,7 @@
 
     <script src="../components/variables.js"></script>
     <script src="../components/searchForm.js"></script>
+    <script src="../components/laporForm.js"></script>
     <script src="../components/accessibility.js"></script>
   </body>
 </html>
