--- a/pages/geografis.html
+++ b/pages/geografis.html
@@ -239,7 +239,80 @@
 
     <section class="main">
       <div class="main-text-container">
-        <div class="main-text-header"> Page Not Found </div>
+        <div class="main-text-header">Letak dan Kondisi Geografis</div>
+        <div class="main-text-withimg-container">
+          <div class="main-text-img-container">
+            <img src="../assets/images/sejarah.jpg" alt="Sejarah" />
+            Raden Mas Adipati Ario Dhipokoesoemo dan Raden Ajoe, 1930, dok.
+            KITLV Digital Media Library<a href="http://media-kitlv.nl"
+              >(http://media-kitlv.nl)</a
+            >
+          </div>
+
+          <div class="main-text-container-inner">
+            <div class="main-text-desc">
+              Kabupaten Batang terletak pada 6° 51' 46" sampai 7° 11' 47" Lintang Selatan dan antara 109° 40' 19" sampai 110° 03' 06" Bujur Timur di pantai utara Jawa Tengah dan berada pada jalur utama yang menghubungkan Jakarta-Surabaya. Luas daerah 78.864,16 Ha. Batas-batas wilayahnya sebelah utara Laut Jawa, sebelah timur Kabupaten Kendal, sebelah selatan Kabupaten Wonosobo dan Kabupaten Banjarnegara, sebelah barat Kota dan Kabupaten Pekalongan.
+            </div>
+            <div class="main-text-desc">
+              Posisi tersebut menempatkan wilayah Kabupaten Batang, utamanya Ibu Kota Pemerintahannya pada jalur ekonomi pulau Jawa sebelah utara. Arus transportasi dan mobilitas yang tinggi di jalur pantura memberikan kemungkinan Kabupaten Batang berkembang cukup prospektif di sektor jasa transit dan transportasi.
+            </div>
+
+            <div class="main-text-header">Kondisi Wilayah</div>
+            <div class="main-text-desc">
+              Kondisi wilayah Kabupaten Batang merupakan kombinasi antara daerah pantai, dataran rendah dan pegunungan. Dengan kondisi ini Kabupaten Batang mempunyai potensi yang sangat besar untuk agroindustri, agrowisata dan agrobisnis.
+            </div>
+
+            <div class="main-text-header">Jarak dengan Daerah Lain</div>
+            <div class="main-text-desc">
+              Jarak Kabupaten Batang dengan daerah-daerah lain:
+              <ul class="distance-list">
+                <li>Pekalongan : 9 Km</li>
+                <li>Pemalang : 43 Km</li>
+                <li>Tegal : 72 Km</li>
+                <li>Cirebon : 144 Km</li>
+                <li>Jakarta : 392 Km</li>
+                <li>Kendal : 64 Km</li>
+                <li>Semarang : 93 Km</li>
+                <li>Surabaya : 480 Km</li>
+              </ul>
+            </div>
+
+            <div class="main-text-header">Topografi</div>
+            <div class="main-text-desc">
+              Keadaan topografi wilayah Kabupaten Batang terbagi atas tiga bagian yaitu pantai, dataran rendah dan wilayah pegunungan. Ada lima gunung dengan ketinggian rata-rata diatas 2000 m, yaitu:
+              <ul class="mountain-list">
+                <li>Gunung Prau : 2.565 mdpl</li>
+                <li>Gunung Sipandu : 2.241 mdpl</li>
+                <li>Gunung Gajah Mungkur : 2.101 mdpl</li>
+                <li>Gunung Alak : 2.239 mdpl</li>
+                <li>Gunung Butak : 2.222 mdpl</li>
+              </ul>
+            </div>
+
+            <div class="main-text-desc">
+              Kondisi wilayah yang merupakan kombinasi antara daerah pantai, dataran rendah dan pegunungan di Kabupaten Batang merupakan potensi yang amat besar untuk dikembangkan pembangunan daerah bercirikan agroindustri, agrowisata dan agrobisnis. Wilayah Kabupaten Batang sebelah selatan yang bercorak pegunungan misalnya sangat potensial untuk dikembangkan menjadi wilayah pembangunan dengan basis agroindustri dan agrowisata. Basis agroindustri ini mengacu pada berbagai macam hasil tanaman perkebunan seperti : teh, kopi, coklat dan sayuran. Selain itu juga memiliki potensi wisata alam yang prospektif di masa datang.
+            </div>
+
+            <div class="main-text-header">Keadaan dan Pemanfaatan Tanah</div>
+            <div class="main-text-desc">
+              Wilayah yang sebagian besar adalah pegunungan dengan susunan tanah sebagai berikut : latesol 69,66%; andosol 13,23%; aluvial 11,47% dan podsolik 5,64%. Susunan tanah tersebut menentukan penyediaan prasarana sebagian besar ditujukan untuk budidaya hutan, perkebunan dan pertanian. Adapun penggunaan hutan dan perkebunan mayoritas di tangan Negara. Sedangkan pertanian baik kering maupun basah (irigasi sederhana dan irigasi teknis) dilakukan oleh warga setempat.
+            </div>
+
+            <div class="main-text-desc">
+              Perubahan areal pemanfaatan tanah sangat stagnan, walaupun Kabupaten Batang terletak di jalur ekonomi. Lebih kurang 60% diusahakan sebagai hutan, perkebunan dan areal pertanian yang memberikan hasil komoditi berupa kayu jati, kayu rimba, karet, teh, coklat, kapuk randu dan hasil pertanian lainnya.
+            </div>
+
+            <div class="main-text-header">Pembagian Wilayah Administratif</div>
+            <div class="main-text-desc">
+              Berdasarkan Peraturan Daerah Kabupaten Batang Nomor 7 Tahun 2004 tentang Pembentukan Kecamatan Kabupaten Batang, jumlah kecamatan di Kabupaten Batang yang semula 12 kecamatan berubah menjadi 15 kecamatan. Pemekaran wilayah ini dilakukan oleh Pemerintah Kabupaten Batang sebagai upaya untuk menyelenggarakan urusan pemerintahan dalam penyelenggaraan pemerintahan, pembangunan dan pelayanan kepada masyarakat khususnya pada tingkat kecamatan, desa, dan kelurahan. Sedangkan tujuannya adalah untuk:
+            </div>
+            <div class="main-text-desc">
+              1. Meningkatkan efektifitas penyelenggaraan pemerintahan di tingkat kecamatan,<br>
+              2. Meningkatkan dan mendekatkan pelayanan kepada masyarakat,<br>
+              3. Meningkatkan dan mempercepat pemerataan pembangunan.
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
